added sparkar project

--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
         <a href="demo/demo.html">A-Frame Demo</a>
         <br>
         <a href="aFrameProject/covidScene.html">A-Frame Project: Parosmia</a>
+        <br>
+        <a href="sparkARProject/filter.html">Spark AR Filter</a>
     </body>
 </html>
