updated index and added packages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
             body{
                 background: lightpink;
-                font-size: 20px;
+                font-size: 40px;
                 font-family: Rockwell;
                 text-align: center;
             }
@@ -16,7 +16,7 @@
         </style>
     </head>
     <body>
-        <h1 style = "color: navy; font-size: 40px;">Mark's XR Dev Site!</h1>
+        <h1 style = "color: navy; font-size: 60px;">Mark's XR Dev Site!</h1>
         <a href="https://markawsm.tumblr.com/">Blog Site</a>
         <br>
         <a href="demo/demo.html">A-Frame Demo</a>
@@ -24,5 +24,11 @@
         <a href="aFrameProject/covidScene.html">A-Frame Project: Parosmia</a>
         <br>
         <a href="sparkARProject/filter.html">Spark AR Filter</a>
+        <br>
+        <a href="packages/fourElements.zip" download>Vuforia Project: The Four Elements</a>
+        <br>
+        <a href="index.html">Unity Environment: After Death V1</a>
+        <br>
+        <a href="packages/finalProposal.pdf"> Final Project Proposal: After Death </a>
     </body>
 </html>
