--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <br>
         <a href="packages/fourElements.zip" download>Vuforia Project: The Four Elements</a>
         <br>
-        <a href="index.html">Unity Environment: After Death V1</a>
+        <a href="https://drive.google.com/uc?export=download&id=1xCRF8yjNfXLtUiaQdEByKzBHG_ejhEP4">Unity Environment: After Death V1</a>
         <br>
         <a href="packages/finalProposal.pdf"> Final Project Proposal: After Death </a>
     </body>
