--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
         <a href="https://drive.google.com/uc?export=download&id=1xCRF8yjNfXLtUiaQdEByKzBHG_ejhEP4">Unity Environment: After Death V1(Google Drive Download link)</a>
         <br>
         <a href="packages/finalProposal.pdf"> Final Project Proposal: After Death </a>
+        <br>
+        <a href="https://markallman.itch.io/after-death"> Final Project: After Death(Playable) </a>
+        <br>
+        <a href="https://drive.google.com/uc?export=download&id=1S4kC0AN-gDKHYSwpFLoph8HQd5Ns4dzZ"> Final Project: After Death(Download) </a>
     </body>
 </html>
